Allow onluy certains urls to download module files
Signed-off-by: Olivier Lamy <olamy@apache.org>